<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingBottom="@dimen/activity_vertical_padding"
    tools:context=".BatailleActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btNouveauJeu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickbtNouveauJeu"
            android:text="@string/btNouveauJeu" />

        <Button
            android:id="@+id/btAtout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/coeur"
            android:gravity="center_horizontal"
            android:onClick="onClickbtAtout"
            android:text="@string/btAtout"
            android:textColor="@color/bleuClair"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:backgroundTintMode="multiply" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imgCarte1"
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/txtCarte1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/back" />

        <ImageView
            android:id="@+id/imgCarte2"
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/txtCarte2"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/back" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvInfosCarte1"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:text="@string/txtJ1"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvInfosCarte2"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:text="@string/txtJ2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center_horizontal"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/etNbPoints"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:ems="10"
        android:hint="@string/edtTotalPoints"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/bleuClair"/>
    <TextView
        android:id="@+id/tvResultat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/txtResultat"
        android:textColor="@color/bleu"
        android:textSize="18sp"
        android:textStyle="italic"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
        android:id="@+id/btJoueur1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:onClick="onClickbtJoueur1"
        android:text="@string/btJoueur1"
        android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/btAucunJoueur"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_centerInParent="true"
            android:enabled="false"
            android:onClick="onClickbtAucunJoueur"
            android:text="@string/btAucunJoueur"
            android:layout_alignParentStart="false"/>

        <Button
            android:id="@+id/btJoueur2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:onClick="onClickbtJoueur2"
            android:text="@string/btJoueur2"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvScore1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/txtScore1"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/tvScore2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txtScore2"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btJouer"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="0dp"
        android:onClick="onClickbtJouer"
        android:text="@string/btJouer"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tvReponses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtReponses"
            android:textColor="@color/violet"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvNbRepCorrectes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/txtNbRepCorrectes"
            android:textColor="@color/violet"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"/>


    </RelativeLayout>



</LinearLayout>